# laneswarm

./: .gitignore  .laneswarm.toml.example  README.md  pyproject.toml
laneswarm/: __init__.py  __main__.py  cli.py  config.py  events.py  fix_planner.py  flanes_bridge.py  model_selector.py  orchestrator.py  planner.py  prompts.py  task_graph.py  verification.py
laneswarm/agents/: __init__.py  base.py  coder.py  integrator.py  reviewer.py  smoker.py
laneswarm/dashboard/: __init__.py  relay.py  serializers.py  server.py
laneswarm/dashboard/web/: app.js  index.html  style.css
laneswarm/providers/: __init__.py  anthropic.py  claude_sdk.py  google.py  ollama.py  openai.py
tests/: conftest.py  test_dashboard_relay.py  test_dashboard_serializers.py  test_events.py  test_events_threadsafe.py  test_flanes_bridge.py  test_providers.py  test_smoker.py  test_task_graph.py
