[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laneswarm"
version = "0.1.4"
description = "Multi-agent autonomous coding system powered by Flanes version control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "flanes>=0.4",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
    "openai>=1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
google = ["google-genai>=1.0"]
ollama = ["ollama>=0.3"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
dashboard = ["websockets>=12.0"]

[project.scripts]
laneswarm = "laneswarm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["laneswarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
